fixed spacing in cntitle p

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -223,7 +223,7 @@ body{
     background-color: #f9f9f9;
     padding: 30px 0px;}
     .cn-title h2{letter-spacing: 2px;color: #424242;line-height: 1.2;font-size: 24px;text-align:center;font-family: 'Roboto';max-width: 100%;margin: auto;}
-    .cn-title p{text-align: center;max-width: 80%;margin: 0 auto;padding-bottom: 5px;line-height: 1.4;font-size: 16px;color: #868484;padding-top: 15px;}
+    .cn-title p{text-align: center;max-width: 80%;margin: 0 auto;padding-bottom: 15px;line-height: 1.4;font-size: 16px;color: #868484;padding-top: 15px;}
     .empower-industry-box{}
     .cn-hover-img img{
     width: 100%;
